Added register for ca and updated roles settings